--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "capsula-koa",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "dependencies": {
+    "koa": "^2.13.4"
+  }
 }
