--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "@koa/router": "^12.0.0",
-    "koa": "^2.13.4"
+    "koa": "^2.13.4",
+    "koa-logger": "^3.2.1"
   }
 }
