--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@koa/router": "^12.0.0",
     "koa": "^2.13.4",
+    "koa-body": "^5.0.0",
     "koa-logger": "^3.2.1"
   }
 }
