--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-logger": "^3.2.1"
+  },
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "yarn nodemon src/app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
